<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Tu contenido principal se queda como está -->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/menu_user"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/white"
                android:contentDescription="@string/abrir_men_de_usuario"
                android:src="@drawable/ic_btn_menu_three_lines"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/app_title"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cart_buy"
                app:layout_constraintStart_toEndOf="@+id/menu_user"
                app:layout_constraintTop_toTopOf="parent" >

            </TextView>

            <ImageButton
                android:id="@+id/cart_buy"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/white"
                android:contentDescription="@string/ver_carrito"
                android:src="@drawable/ic_buy_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/app_title"
                app:layout_constraintTop_toTopOf="parent" >

            </ImageButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- El resto de tu contenido... -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- ... Aquí dentro va todo el resto de tu contenido (fast_options, novedades, etc.) ... -->
                <!-- He movido el resto de tu contenido a un ScrollView para asegurar que se vea bien en todas las pantallas -->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fast_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/btn_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_door"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="75dp"
                            android:layout_height="85dp"
                            app:cardCornerRadius="35dp"
                            app:cardElevation="10dp"
                            app:cardPreventCornerOverlap="false"
                            app:cardUseCompatPadding="true">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:background="@color/white"
                                android:src="@drawable/ic_motorcycle" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/delivery" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_door"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_menu"
                        app:layout_constraintStart_toEndOf="@+id/btn_delivery"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="75dp"
                            android:layout_height="85dp"
                            app:cardCornerRadius="35dp"
                            app:cardElevation="10dp"
                            app:cardPreventCornerOverlap="false"
                            app:cardUseCompatPadding="true">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:background="@color/white"
                                android:src="@drawable/ic_door_open" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/en_puerta" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_door"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="75dp"
                            android:layout_height="85dp"
                            app:cardCornerRadius="35dp"
                            app:cardElevation="10dp"
                            app:cardPreventCornerOverlap="false"
                            app:cardUseCompatPadding="true">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:background="@color/white"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/ic_menu" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/men" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- ... Tu sección de novedades y locales va aquí dentro ... -->

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- ======== CONTENEDOR DEL MENÚ LATERAL ======== -->
    <!-- Este es el contenedor que se deslizará. -->
    <!-- Inicialmente está fuera de la pantalla (translationX negativo) y es invisible. -->
    <!-- ... -->
    <!-- ======== CONTENEDOR DEL MENÚ LATERAL ======== -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/user_menu_container"

        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:translationX="-280dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp" />

    <!-- ======== CAPA OSCURA (SCRIM) ======== -->
    <View
        android:id="@+id/scrim_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#99000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="9dp" /> <!-- AÑADIDO: También a la capa oscura, justo debajo del menú -->
    <!-- ... -->


</androidx.constraintlayout.widget.ConstraintLayout>
